--- a/package.json
+++ b/package.json
@@ -11,14 +11,45 @@
   "description": "",
   "devDependencies": {
     "autoprefixer": "^6.3.3",
+    "browser-sync": "^2.11.2",
     "css-mqpacker": "^4.0.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cleancss": "^0.2.2",
-    "gulp-less": "^3.0.5",
-    "gulp-postcss": "^6.1.0",
-    "gulp-rename": "^1.2.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-csscomb": "^3.0.7",
+    "gulp-cssshrink": "^0.1.6",
+    "gulp-exit": "0.0.2",
     "gulp-file-include": "^0.13.7",
+    "gulp-filter": "^4.0.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-newer": "^1.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.1.0",
+    "gulp-prettify": "^0.4.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-svg-spritesheet": "0.0.4",
+    "gulp-svg2png": "^1.0.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "gulp.spritesmith": "^6.2.1",
+    "imagemin-jpegoptim": "^4.1.0",
+    "imagemin-pngquant": "^4.2.2",
+    "jsdoc": "^3.4.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "main-bower-files": "^2.11.1",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
+    "styledocco": "^0.6.6"
   }
 }
