--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {
     "autoprefixer": "^6.3.3",
     "browser-sync": "^2.11.1",
-    "css-mqpacker": "^4.0.0",
     "cross-env": "^1.0.7",
+    "css-mqpacker": "^4.0.0",
     "del": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-cheerio": "^0.6.2",
@@ -35,9 +35,10 @@
     "gulp-svgstore": "^5.0.5",
     "gulp-uglify": "^1.5.2",
     "imagemin-pngquant": "^4.2.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "stylefmt": "^3.1.0"
   },
-   "config": {
+  "config": {
     "directories": {
       "source": "./src",
       "build": "./build"
